--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiet---deep-focus-&-rest",
+  "name": "quiet-deep-focus-rest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
